# jake

./: .gitignore  .mypy.ini  .pre-commit-hooks.yaml  .pylintrc  .readthedocs.yaml  .sonarcloud.properties  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile  MANIFEST.in  Pipfile  README.md  jake-whitelist.json  license-excludes.xml  pyproject.toml  requirements-dev.txt  requirements.lowest.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: ci-publish.sh  ci-run.sh  ci-setup.sh  circleci-readme.md  config.yml
.circleci-DISABLED/: circleci-readme.md  config.yml
.github/: CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: GITHUBACTIONS-README.md  build.yaml  ci.yml  deploy.yml  release.yml
.github/workflows.DISABLED/: deploy.yml
docs/: changelog.rst  conf.py  configuration.rst  index.rst  install.rst  make.bat  requirements.txt  support.rst  usage.rst
jake/: __main__.py  _version.py  app.py  ossindexresponse.txt  test_audit.py  test_ossindex.py  test_parse.py
jake/_internal/parsers/: __init__.py  base.py  conda.py  environment.py  pipenv.py  poetry.py  requirements.py
jake/audit/: audit.py
jake/command/: __init__.py  config.py  iq.py  oss.py  parser_selector.py  sbom.py
jake/config/: config.py  iq_config.py
jake/cyclonedx/: generator.py
jake/cyclonedx/v1_1/: generator.py  validator.py  xml.xsd
jake/iq/: iq.py
jake/model/: coordinates.py
jake/ossindex/: ossindex.py
jake/parse/: coordinates.py  parse.py
jake/pip/: pip.py
jake/test/: condalistoutput.txt  iqapplicationresponse.txt  iqpolicyfailureresponse.txt  iqpolicynoneresponse.txt  iqresponse_absolute_report_url.json  iqresponse_relative_report_url.json  iqstatusurlresponse.txt  ossindexresponse.txt  ossindexvulnerableresponse.txt  ossindexvulnerablesnipresponse.txt  test__main__.py  test_audit.py  test_config.py  test_coordinateresults.py  test_iq.py  test_iq_config.py  test_main.py  test_ossindex.py  test_parse.py  test_pip.py  test_results_decoder.py  test_sbom_generator.py
jake/types/: coordinateresults.py  coordinates.py  results.py  results_decoder.py  vulnerabilities.py
tests/: __init__.py  test_jake.py
