#
# Copyright 2019-Present Sonatype Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[tool.poetry]
name = "jake"
version = "3.0.10"
description = "An OSS Index integration to check for vulnerabilities in your Python environments"
authors = ["Sonatype Community <community-group@sonatype.com>"]
maintainers = ["Sonatype Community <community-group@sonatype.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sonatype-nexus-community/jake"
repository = "https://github.com/sonatype-nexus-community/jake"
packages = [
    { include = "jake" }
]
include = [
    "LICENSE"
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Legal Industry',
    'Intended Audience :: System Administrators',
    'Topic :: Security',
    'Topic :: Software Development',
    'Topic :: System :: Software Distribution',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Typing :: Typed'
]
keywords = [
    "BOM", "SBOM", "SCA", "OWASP"
]

[tool.poetry.scripts]
jake = 'jake.app:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sonatype-nexus-community/jake/issues"

[tool.poetry.dependencies]
python = "^3.7"
cyclonedx-bom = "^3.0.0"
importlib-metadata = { version = ">= 3.7", python = "< 3.8" }
ossindex-lib = "^1.0.0"
polling2 = "^0.5.0"
pyfiglet = ">= 0.7.6, < 1.0.0"
requests = "^2.31.0"
rich = ">= 10.10.0"

[tool.poetry.dev-dependencies]
tox = "^3.28.0"
coverage = "^6.2"
flake8 = "^4.0.1"
mypy = ">= 0.920, < 1.00"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
