[tool.poetry]
name = "jake"
version = "3.1.0"
description = "An OSS Index integration to check for vulnerabilities in your Python environments"
authors = ["Sonatype Community <community-group@sonatype.com>"]
maintainers = ["Sonatype Community <community-group@sonatype.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sonatype-nexus-community/jake"
repository = "https://github.com/sonatype-nexus-community/jake"
packages = [
    { include = "jake" }
]
include = [
    "LICENSE"
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Legal Industry',
    'Intended Audience :: System Administrators',
    'Topic :: Security',
    'Topic :: Software Development',
    'Topic :: System :: Software Distribution',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Typing :: Typed'
]
keywords = [
    "BOM", "SBOM", "SCA", "OWASP"
]

[tool.poetry.scripts]
jake = 'jake.app:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sonatype-nexus-community/jake/issues"

[tool.poetry.dependencies]
python = "^3.8"
cyclonedx-bom = "^3.0.0"
importlib-metadata = { version = ">= 3.7", python = "< 3.8" }
ossindex-lib = "^1.0.0"
pyfiglet = ">= 0.8.post1, < 2.0.0"
rich = ">= 10.10.0"
sonatype-iq-api-client = "^0.201.0"

[tool.poetry.dev-dependencies]
tox = "^3.28.0"
coverage = "^6.2"
flake8 = "^4.0.1"
mypy = ">= 0.920, < 1.00"


[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

