[tool.poetry]
name = "jake"
version = "4.0.0rc1"
description = "A Sonatype Guide and Lifecycle integration to check for vulnerabilities in your Python environments"
authors = ["Sonatype Community <community-group@sonatype.com>"]
maintainers = ["Sonatype Community <community-group@sonatype.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sonatype-nexus-community/jake"
repository = "https://github.com/sonatype-nexus-community/jake"
packages = [
    { include = "jake" }
]
include = [
    "LICENSE"
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Legal Industry',
    'Intended Audience :: System Administrators',
    'Topic :: Security',
    'Topic :: Software Development',
    'Topic :: System :: Software Distribution',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed'
]
keywords = [
    "BOM", "SBOM", "SCA", "OWASP", "Sonatype", "Sonatype Guide", "Sonatype Lifecycle"
]

[tool.poetry.scripts]
jake = 'jake.app:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sonatype-nexus-community/jake/issues"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
cyclonedx-python-lib = "^11.7.0"
tomli = { version = "^2.0", python = "< 3.11" }
sonatype-guide-api-client = "^0.1.0"
sonatype-iq-api-client = "^0.201.0"
certifi = ">=2024.7.4"
urllib3 = ">=2.7.0"
art = ">=6.5, <7.0"
rich = ">=13.2.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.0"
coverage = "^7.14"
flake8 = "^7.3"
mypy = "^2.1"


[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

